added competence linguistique